--- a/DiaryApp/Base.lproj/Main.storyboard
+++ b/DiaryApp/Base.lproj/Main.storyboard
@@ -193,22 +193,26 @@
                                     <size key="estimatedItemSize" width="140" height="160"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="20" minY="5" maxX="20" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="15" maxX="20" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DiaryCell" id="4yP-Yz-V5P" customClass="DiaryCell" customModule="DiaryApp" customModuleProvider="target">
-                                        <rect key="frame" x="28" y="13" width="140" height="160"/>
+                                        <rect key="frame" x="28" y="23" width="140" height="164.5"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="do8-vZ-J4l">
-                                            <rect key="frame" x="0.0" y="0.0" width="140" height="160"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="140" height="164.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4j8-Oc-bUQ">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4j8-Oc-bUQ">
                                                     <rect key="frame" x="0.0" y="0.0" width="140" height="124"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="124" id="F2A-ha-xdA"/>
+                                                        <constraint firstAttribute="width" constant="140" id="PEu-m7-5c8"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="매우맑음 ☀️" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ooh-2x-OTN">
-                                                    <rect key="frame" x="27" y="129" width="86.5" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sunny" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ooh-2x-OTN">
+                                                    <rect key="frame" x="47" y="129" width="46" height="25.5"/>
+                                                    <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -224,6 +228,7 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
+                                            <outlet property="image" destination="4j8-Oc-bUQ" id="uNa-2p-xgI"/>
                                             <outlet property="title" destination="Ooh-2x-OTN" id="yfN-NM-jqo"/>
                                         </connections>
                                     </collectionViewCell>
