--- a/DiaryApp/Base.lproj/Main.storyboard
+++ b/DiaryApp/Base.lproj/Main.storyboard
@@ -22,16 +22,22 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailListCell" id="WCU-eW-j4n" customClass="DetailListCell" customModule="DiaryApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="49.5" width="414" height="46.5"/>
+                                        <rect key="frame" x="0.0" y="49.5" width="414" height="53.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WCU-eW-j4n" id="4nL-rB-U6v">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="46.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="53.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0g9-Ve-DLi">
-                                                    <rect key="frame" x="20" y="10" width="34" height="26.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0g9-Ve-DLi">
+                                                    <rect key="frame" x="20" y="10" width="48.5" height="33.5"/>
+                                                    <attributedString key="attributedText">
+                                                        <fragment content="제목">
+                                                            <attributes>
+                                                                <font key="NSFont" size="28" name="NanumBbangGuNiMamSonGeurSsi"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -93,51 +99,61 @@
                                 <rect key="frame" x="25" y="144" width="364" height="618"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ky-5W-a5v">
-                                        <rect key="frame" x="30" y="556.5" width="304" height="41.5"/>
+                                        <rect key="frame" x="30" y="557" width="304" height="41"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
-                                        <color key="tintColor" systemColor="linkColor"/>
+                                        <color key="tintColor" systemColor="systemYellowColor"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="save">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
-                                        <buttonConfiguration key="configuration" style="tinted" title="저장">
-                                            <fontDescription key="titleFontDescription" type="system" weight="light" pointSize="23"/>
-                                            <color key="baseForegroundColor" systemColor="tintColor"/>
+                                        <buttonConfiguration key="configuration" style="tinted">
+                                            <attributedString key="attributedTitle">
+                                                <fragment content="저장">
+                                                    <attributes>
+                                                        <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <font key="NSFont" size="23" name="NanumBbangGuNiMamSonGeurSsi"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="addTaskButtonTapped:" destination="SjU-4k-iEu" eventType="touchUpInside" id="s44-F7-798"/>
                                         </connections>
                                     </button>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fWr-hr-Btc">
-                                        <rect key="frame" x="0.0" y="52" width="364" height="499.5"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" usesAttributedText="YES" allowsEditingTextAttributes="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fWr-hr-Btc">
+                                        <rect key="frame" x="0.0" y="59.5" width="364" height="492.5"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <color key="textColor" systemColor="labelColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="..">
+                                                <attributes>
+                                                    <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                    <font key="NSFont" size="24" name="NanumBbangGuNiMamSonGeurSsi"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cn3-pO-KO7">
-                                        <rect key="frame" x="10" y="20" width="344" height="27"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="21"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cn3-pO-KO7">
+                                        <rect key="frame" x="10" y="20" width="344" height="34.5"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="나는 오늘..">
+                                                <attributes>
+                                                    <font key="NSFont" size="28" name="NanumBbangGuNiMamSonGeurSsi"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nhw-yE-gSS">
-                                        <rect key="frame" x="10" y="20" width="344" height="27"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="21"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="8ky-5W-a5v" firstAttribute="leading" secondItem="z5R-09-fux" secondAttribute="leading" constant="30" id="6ai-i2-24t"/>
-                                    <constraint firstItem="Nhw-yE-gSS" firstAttribute="top" secondItem="Cn3-pO-KO7" secondAttribute="top" id="JMX-Og-b6R"/>
-                                    <constraint firstItem="Nhw-yE-gSS" firstAttribute="leading" secondItem="Cn3-pO-KO7" secondAttribute="leading" id="MMy-OQ-iaw"/>
                                     <constraint firstItem="fWr-hr-Btc" firstAttribute="leading" secondItem="z5R-09-fux" secondAttribute="leading" id="NTx-iU-dWZ"/>
-                                    <constraint firstItem="Nhw-yE-gSS" firstAttribute="centerY" secondItem="Cn3-pO-KO7" secondAttribute="centerY" id="PaX-Zm-q0K"/>
-                                    <constraint firstItem="Nhw-yE-gSS" firstAttribute="trailing" secondItem="Cn3-pO-KO7" secondAttribute="trailing" id="RV3-6U-vX5"/>
                                     <constraint firstItem="fWr-hr-Btc" firstAttribute="top" secondItem="Cn3-pO-KO7" secondAttribute="bottom" constant="5" id="T96-1M-r67"/>
                                     <constraint firstItem="Cn3-pO-KO7" firstAttribute="top" secondItem="z5R-09-fux" secondAttribute="top" constant="20" id="U9k-U0-tBi"/>
-                                    <constraint firstItem="Nhw-yE-gSS" firstAttribute="bottom" secondItem="Cn3-pO-KO7" secondAttribute="bottom" id="V8F-Pt-3mO"/>
                                     <constraint firstAttribute="trailing" secondItem="fWr-hr-Btc" secondAttribute="trailing" id="aSC-7D-IXu"/>
                                     <constraint firstItem="Cn3-pO-KO7" firstAttribute="leading" secondItem="z5R-09-fux" secondAttribute="leading" constant="10" id="arX-l3-wpH"/>
                                     <constraint firstItem="8ky-5W-a5v" firstAttribute="top" secondItem="fWr-hr-Btc" secondAttribute="bottom" constant="5" id="e0h-v5-laj"/>
@@ -197,10 +213,10 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DiaryCell" id="4yP-Yz-V5P" customClass="DiaryCell" customModule="DiaryApp" customModuleProvider="target">
-                                        <rect key="frame" x="28" y="23" width="140" height="164.5"/>
+                                        <rect key="frame" x="28" y="23" width="140" height="167"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="do8-vZ-J4l">
-                                            <rect key="frame" x="0.0" y="0.0" width="140" height="164.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="140" height="167"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4j8-Oc-bUQ">
@@ -210,10 +226,17 @@
                                                         <constraint firstAttribute="width" constant="140" id="PEu-m7-5c8"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sunny" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ooh-2x-OTN">
-                                                    <rect key="frame" x="47" y="129" width="46" height="25.5"/>
-                                                    <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="18"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ooh-2x-OTN">
+                                                    <rect key="frame" x="49" y="129" width="42" height="28"/>
+                                                    <attributedString key="attributedText">
+                                                        <fragment content="맑음">
+                                                            <attributes>
+                                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                <font key="NSFont" size="24" name="NanumBbangGuNiMamSonGeurSsi"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -274,17 +297,11 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="tintColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
